fixed layout bugs

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -32,6 +32,10 @@
 ======================*/
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic);
 
+#search-button-mobile {
+    display: none;
+}
+
 html,
 body {
     height: 100% !important;
@@ -86,6 +90,27 @@ h1, h2, h3, h4, h5, h6 {
     -o-transition: all 0.3s ease 0s;
     -ms-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
+}
+
+#search-button-mobile {
+    background-color: #fc7700;
+    color: #FFF;
+    -webkit-box-shadow: inset 0 0 0 2px #fc7700;
+    box-shadow: inset 0 0 0 2px #fc7700;
+    text-transform: uppercase;
+    width: 50px;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+    padding: 0;
+    font-size: 18px;
+    font-weight: 800;
+    border: 0;
+    -webkit-transition: all 0.3s ease 0s;
+    -moz-transition: all 0.3s ease 0s;
+    -o-transition: all 0.3s ease 0s;
+    transition: all 0.3s ease 0s;
+    float: left;
 }
 
 .slider-btn:hover {
@@ -1097,7 +1122,6 @@ h1, h2, h3, h4, h5, h6 {
     -o-transition: all 1s ease 0s;
     -webkit-box-shadow:2px 2px 2px 2px #ddd;
     box-shadow: 2px 2px 2px 2px #ddd;
-    width: 100%;
 }
 
 .single-blog:hover.single-blog h2 {
@@ -1617,4 +1641,38 @@ body section {
 
 .post-meta li {
     width: 100%;
+}
+
+@media screen and (max-width: 400px) { /* Минимум 512 цветов */
+    .single-blog {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    #search-box {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    #search-button {
+        display: none;
+    }
+
+    #search-button-mobile {
+        display: block;
+    }
+
+    #search-field {
+        width: 80%;
+    }
+
+    body .parallax-section {
+        height: 215px;
+        min-height: 200px;
+    }
+
+    #search-box.search-box {
+        margin-top: 120px;
+    }
 }
